<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchSettingsActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_advanced_search_options"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spImageSizes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/tvImageSize"
        android:entries="@array/image_sizes"
        android:prompt="@string/image_sizes_desc" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/spImageSizes"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/image_sizes_desc" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvImageSize"
        android:layout_marginTop="55dp"
        android:text="@string/color_filters_desc" />

    <Spinner
        android:id="@+id/spColorFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvColorFilter"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvColorFilter"
        android:entries="@array/color_filters"
        android:prompt="@string/color_filters_desc" />

   

    <Spinner
        android:id="@+id/spnImageTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tvImageType" 
        android:entries="@array/image_types"
        android:prompt="@string/image_types_desc"
        />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/spnImageTypes"
        android:layout_alignLeft="@+id/tvColorFilter"
        android:text="@string/image_types_desc" />
    
     <Button
        android:id="@+id/btnSaveAdSearchOpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:onClick="saveAdvancedSearchSettings"
        android:text="@string/activity_search_settings_save_btn" />

     <TextView
         android:id="@+id/tvSiteFilter"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tvImageType"
         android:layout_marginTop="33dp"
         android:layout_toLeftOf="@+id/spnImageTypes"
         android:text="@string/site_filter_title" />

     <EditText
         android:id="@+id/etSiteFilter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/tvSiteFilter"
         android:layout_alignBottom="@+id/tvSiteFilter"
         android:layout_toRightOf="@+id/tvSiteFilter"
         android:ems="10"
         android:hint="@string/site_filter_title" >

         <requestFocus />
     </EditText>

</RelativeLayout>